--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #f8f8f8;
+    background-color: #ffffff;
     height: 60px;
     padding: 10px 0;
     text-align: center;
