--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Courier New", monospace;
+    font-family: "Arial", monospace;
     font-weight: 400;
     color: #666;
     margin: 0;
