--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     line-height: 1.5;
 }
 
+.section { padding-bottom: 40px; }
+
 header {
     background-color: #ffffff;
     height: 60px;
